# gpui-component

./: .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md
crates/reqwest_client/src/: reqwest_client.rs
crates/story/: Cargo.toml
crates/story/examples/: dock.rs  editor.rs
crates/story/src/: lib.rs  main.rs  title_bar.rs
crates/story/src/stories/: dialog_story.rs  list_story.rs  mod.rs  notification_story.rs  select_story.rs  sheet_story.rs  table_story.rs
crates/story/src/stories/chart_story/: chart_story.rs
crates/ui/src/: color_picker.rs  dialog.rs  lib.rs  root.rs  sheet.rs  tree.rs
crates/ui/src/button/: button.rs
crates/ui/src/dock/: tab_panel.rs
crates/ui/src/input/: state.rs
crates/ui/src/list/: delegate.rs  list.rs
crates/ui/src/menu/: app_menu_bar.rs  popup_menu.rs
crates/ui/src/table/: state.rs
crates/ui/src/text/: state.rs
crates/ui/src/theme/: default-theme.json
docs/.vitepress/: config.mts
docs/docs/components/: chart.md  description-list.md  dialog.md  index.md  list.md  table.md
examples/app_assets/: Cargo.toml
examples/dialog_overlay/: Cargo.toml
examples/hello_world/: Cargo.toml
examples/input/: Cargo.toml
examples/json_formatter/: Cargo.toml  PRE-COMMIT.md  clippy.toml
examples/json_formatter/src/: assets.rs  main.rs
examples/window_title/: Cargo.toml
themes/: everforest.json
