[package]
name = "json_formatter"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
gpui-component = { path = "../../crates/ui" }
gpui-component-assets = { path = "../../crates/assets" }
gpui = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
json5 = { path = "../../crates/json5" }